--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 authors = ["Patrick M. Elsen <pelsen@xfbs.net>"]
 license = "MIT"
 description = "Trait to determine number width"
+repository = "https://github.com/xfbs/num-width"
+documentation = "https://docs.rs/num-width"
+categories = ["algorithms", "mathematics", "no-std::no-alloc", "no-std", "science", "text-processing", "value-formatting"]
+tags = ["numerics", "width", "numbers"]
 
 [dependencies]
 num-bigint = { version = "0.4.0", optional = true }
